[package]
name = "houze"
version = "0.1.0"
authors = ["mntmn <lukas@mntre.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.32"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
bufstream = "0.1"
